--- a/resources/scss/styles.scss
+++ b/resources/scss/styles.scss
@@ -1,4 +1,29 @@
+$black : black;
+
 label {
   margin-top: 20px;
   margin-bottom: 20px;
+  font-size: 20px;
+}
+
+
+img {
+  width: 1140px;
+  height: 196px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+body {
+  background-image: url(https://images.unsplash.com/photo-1416453072034-c8dbfa2856b5?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&cs=tinysrgb&s=c7234c8020c770ecfa4e6fa2d9062e01);
+  background-size: cover;
+}
+
+.well {
+  background-color: rgba(211,211,211,0.5);
+}
+
+h3 {
+  color: $black;
+  background-color: rgba(211,211,211,0.5);
 }
