Fix error with adding Meals to the list, wait for GitHub to stop having a DDOS attack, attempt to fix the edit button issue

--- a/resources/scss/styles.scss
+++ b/resources/scss/styles.scss
@@ -25,5 +25,13 @@ body {
 
 h3 {
   color: $black;
-  background-color: rgba(211,211,211,0.5);
+}
+
+a {
+  background-color: green;
+  color:white;
+}
+
+input {
+  length: 500px;
 }
