Add README file, edit meal list, and add style

--- a/resources/scss/styles.scss
+++ b/resources/scss/styles.scss
@@ -27,11 +27,6 @@ h3 {
   color: $black;
 }
 
-a {
-  background-color: green;
-  color:white;
-}
-
-input {
+input.form-control {
   length: 500px;
 }
